fix: Fixed add container button out of the screen.

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,7 @@
     transform: scale(.98);
   }
 }
+
+.grabbable {
+  cursor: grab;
+}
